--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-name: openldap-okd
+name: openldap
 version: 1.4.0-dev
 appVersion: dev
 description: An open source implementation of the Lightweight Directory Access Protocol, which is a vendor-neutral, industry standard application protocol for accessing and maintaining distributed directory information services over an Internet Protocol (IP) network.
