Allow to edit image from values

--- a/templates/openldap-deploy.yaml
+++ b/templates/openldap-deploy.yaml
@@ -26,7 +26,7 @@ spec:
             name: openldap-schema-ldif
       containers:
         - name: openldap
-          image: image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/openldap-okd:latest
+          image: "{{ .Values.openshift.registry }}/{{ .Release.Namespace }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           env:
             - name: LDAP_PORT_NUMBER
               value: "1389"
